start edits for basket page

--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -1,8 +1,8 @@
-extends layout/main
+extends layout/main-footer-light
 
 block variables
 
-  - var title = 'корзина'
+  - var title = 'basket'
   - var mainPage = false
 
 
