basket page changes

--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -14,8 +14,8 @@ block content
           .col-md-6
             .d-md-none.mb-3
               a.link.link--black(href='#') Вернуться в корзину
-            h1.h1 Оформление заказа
-            p.mt-2.fs16  Обработка заказов ежедневно
+            .basket-form__title Оформление заказа
+            .basket-form__text    Обработка заказов ежедневно
               nobr 09:00 — 21:00
           .col-auto.d-none.d-md-block
             span 
