--- a/dev/modules/popups/auth-form.pug
+++ b/dev/modules/popups/auth-form.pug
@@ -1,5 +1,5 @@
 
-#auth-form.page-popup.mfp-hide
+#auth-form.page-popup.page-popup--auth-form.mfp-hide
   .page-popup-inner
     .page-popup-title Войти
     .page-popup-title--small Введите свою почту и пароль, чтобы войти.
@@ -19,9 +19,9 @@
               button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ВЫСЛАТЬ КОД
             .form-row
               .form-group-inner
-                a.link.link--black_simple(href='#')
+                a.link.link--black_border(href='#')
                   span Я забыл пароль  
-                a.link.link--black_simple(href='#')
+                a.link.link--black_border(href='#')
                   span Регистрация
           #auth-form_email.tab-content-item.auth-tab.active.form-tab-content-item
             .form-row
@@ -36,7 +36,7 @@
               button.btn.btn--black.btn--medium.w100.max-w100(type='submit') Войти
             .form-row
               .form-group-inner
-                a.link.link--black_simple(href='#')
+                a.link.link--black_border(href='#')
                   span Я забыл пароль  
-                a.link.link--black_simple(href='#')
+                a.link.link--black_border(href='#')
                   span Регистрация
