--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -279,14 +279,17 @@
 
 //- - данные для Самовывоза
 //-  стр: basket.html
+
+
+
+//- Бесплатно
+
+
 - 
     const pickupItems = [
-        {metro:'ТРЦ Горизонт',               address: 'пр-т Михаила Нагибина, д. 32/2, ТРЦ «Горизонт», «Премиум-галерея» 1 этаж (с 10:00 до 22:00) ', data:'Можно забрать 1 июня, в субботу'},
-        {metro:'Проспект Чехова, д. 51–53 ', address: 'проспект Чехова, д. 51-53 (с 09:00 до 21:00)',                                                 data:'Можно забрать 1 июня, в субботу'},
-        {metro:'Проспект Чехова, д. 51–53 ', address: 'проспект Чехова, д. 51-53 (с 09:00 до 21:00)',                                                 data:'Можно забрать 1 июня, в субботу'},
-        {metro:'Проспект Чехова, д. 51–53 ', address: 'проспект Чехова, д. 51-53 (с 09:00 до 21:00)',                                                 data:'Можно забрать 1 июня, в субботу'},
-        {metro:'Проспект Чехова, д. 51–53 ', address: 'проспект Чехова, д. 51-53 (с 09:00 до 21:00)',                                                 data:'Можно забрать 1 июня, в субботу'},
-        {metro:'Проспект Чехова, д. 51–53 ', address: 'проспект Чехова, д. 51-53 (с 09:00 до 21:00)',                                                 data:'Можно забрать 1 июня, в субботу'},
+        {metro:'Самовывоз — г. Ростов-на-Дону, пр-т Михаила Нагибина', address: 'г. Ростов-на-Дону, пр-т Михаила Нагибина, д. 32/2, ТРЦ «Горизонт»', data:'«Премиум-галерея», 1 этаж (с 10:00 до 22:00)', payment: 'Бесплатно'},
+        {metro:'Самовывоз — г. Ростов-на-Дону, проспект Чехова, д. 51-53', address: 'г. Ростов-на-Дону, проспект Чехова, д. 51-53 (с 09:00 до 21:00)', data:'', payment: 'Бесплатно'},
+
         ]
 
 //- - данные для Доставки
