--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -2721,6 +2721,15 @@ a.basket-menu__link_lowercase {
   max-width: 430px;
   padding: 55px 45px;
 }
+.page-popup--auth-form {
+  min-width: 430px;
+  padding: 20px !important;
+}
+@media screen and (max-width: 480px) {
+  .page-popup--auth-form {
+    min-width: 100%;
+  }
+}
 .page-popup-heading {
   margin-bottom: 20px;
 }
@@ -3222,6 +3231,10 @@ ul.footer-top__list {
 .search-form {
   position: relative;
 }
+.search-form--basket .search-form__clear {
+  right: 0;
+  visibility: visible;
+}
 
 .search-form:before {
   content: "";
@@ -3406,11 +3419,16 @@ ul.footer-top__list {
 }
 
 .form-group-inner {
-  display: box;
   display: flex;
   flex-flow: row wrap;
   align-items: flex-start;
   justify-content: space-between;
+}
+@media screen and (max-width: 480px) {
+  .form-group-inner {
+    flex-direction: column;
+    gap: 15px;
+  }
 }
 
 .form-group-inner .form-group-item--w25 {
@@ -3423,6 +3441,11 @@ ul.footer-top__list {
 
 .form-group-inner .form-group-item--w32 {
   width: 32%;
+}
+@media screen and (max-width: 480px) {
+  .form-group-inner .form-group-item--w32 {
+    width: 100%;
+  }
 }
 
 .form-group-inner .form-group-item--w40 {
@@ -3679,7 +3702,8 @@ ul.footer-top__list {
 }
 
 .order-table__img {
-  width: 127px;
+  width: 100%;
+  max-width: 127px;
 }
 
 .order-table__info {
@@ -3701,6 +3725,13 @@ ul.footer-top__list {
   font-size: 12px;
   line-height: 20px;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 480px) {
+  .order-table__color,
+.order-table__size,
+.order-table__name {
+    font-size: 10px;
+  }
 }
 
 .order-table__name {
@@ -3820,7 +3851,8 @@ ul.footer-top__list {
 }
 
 .order-table__item > .order-table__img {
-  width: 175px;
+  width: 100%;
+  max-width: 175px;
 }
 
 .order-table__item > .order-table__item-delete {
@@ -3880,6 +3912,11 @@ ul.footer-top__list {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 480px) {
+  .order-aside__to-pay {
+    flex-direction: column;
+  }
 }
 .order-aside__price {
   font-weight: 600;
@@ -4559,6 +4596,12 @@ ul.footer-top__list {
   margin-bottom: 50px;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 480px) {
+  .basket__body {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
 .basket__body .order-aside {
   padding: 40px;
   background: #F7F5F5;
@@ -4567,8 +4610,8 @@ ul.footer-top__list {
 }
 @media screen and (max-width: 530px) {
   .basket__body .order-aside {
-    border: 1px solid red;
     min-width: auto;
+    padding: 15px;
   }
 }
 .basket__body-left {
@@ -4615,6 +4658,11 @@ ul.footer-top__list {
   align-items: baseline;
   gap: 8px;
 }
+@media screen and (max-width: 480px) {
+  .filter-row__inner label.form-radio {
+    flex-direction: column;
+  }
+}
 .filter-row__inner .form-radio .jcf-radio {
   top: 3px;
 }
@@ -4627,7 +4675,15 @@ ul.footer-top__list {
   margin-bottom: 43px;
 }
 
+.basket__pickup-metro {
+  font-weight: bold;
+}
+
 .basket__pickup-data {
+  margin-top: 5px;
+}
+
+.basket__pickup-payment {
   margin-top: 15px;
 }
 
@@ -4635,11 +4691,31 @@ ul.footer-top__list {
   margin-left: 30px;
 }
 
+@media screen and (max-width: 480px) {
+  .basket-form {
+    font-size: 12px;
+  }
+}
 .basket-form__title {
   font-weight: 600;
   font-size: 18px;
   line-height: 25px;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 480px) {
+  .basket-form__title {
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+}
+.basket-form__text {
+  font-size: 16px;
+}
+@media screen and (max-width: 480px) {
+  .basket-form__text {
+    font-size: 12px;
+  }
 }
 .basket-form .filter-row,
 .basket-form .simplebar {
@@ -4656,6 +4732,12 @@ ul.footer-top__list {
 .basket-form .form-row-payment label {
   margin-right: 23px;
 }
+@media screen and (max-width: 480px) {
+  .basket-form .form-row-payment {
+    flex-direction: column;
+    gap: 15px;
+  }
+}
 
 .basket-form .filter-row.black-border {
   border: 1px solid #1D1D1D;
@@ -4663,6 +4745,12 @@ ul.footer-top__list {
 
 .filter-row__form-radio {
   display: flex;
+}
+@media screen and (max-width: 480px) {
+  .filter-row__form-radio {
+    flex-direction: column;
+    gap: 15px;
+  }
 }
 .filter-row__radio-coll, .filter-row__text-coll {
   display: flex;
@@ -5357,6 +5445,30 @@ ul.footer-top__list {
   margin-top: 60px;
 }
 
+.mt-40px {
+  margin-top: 40px;
+}
+
+.mb-40px {
+  margin-bottom: 40px;
+}
+
+.mt-30px {
+  margin-top: 30px;
+}
+
+.mb-30px {
+  margin-bottom: 30px;
+}
+
+.mt-10px {
+  margin-top: 10px;
+}
+
+.mb-10px {
+  margin-bottom: 10px;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -5366,7 +5478,7 @@ ul.footer-top__list {
 }
 
 .order-aside-sticky {
-  top: 20px;
+  top: 140px;
   position: -webkit-sticky;
   position: sticky;
 }
