--- a/dev/modules/basket/total-cost.pug
+++ b/dev/modules/basket/total-cost.pug
@@ -15,7 +15,7 @@
       .promocode-block__col
         input#card.form-item.form-item--text(type='text')
       .promocode-block__col
-        button.btn.btn--medium.btn--black_border.mx-auto(type='button') Применить
+        button.btn.btn--medium.btn--black_border.mx-auto.w-100(type='button') Применить
 
   #promocode-block.promocode-block1
     label.form-item-label(for='promocode') Промо-код
@@ -23,7 +23,7 @@
       .promocode-block__col
         input#promocode.form-item.form-item--text(type='text')
       .promocode-block__col
-        button.btn.btn--medium.btn--black_border.mx-auto(type='button') Применить
+        button.btn.btn--medium.btn--black_border.mx-auto.w-100(type='button') Применить
 
   a.btn.btn--large.btn--black.btn--fullwidth(href='#checkout-popup' data-popup='{"type":"inline"}') ОФОРМИТЬ ЗАКАЗ
   .form-policy
