--- a/dev/modules/catalog/static-dress-for-new-season.pug
+++ b/dev/modules/catalog/static-dress-for-new-season.pug
@@ -4,7 +4,7 @@ each item in catalogStaticDress
     .catalog-item-text__title= item.title
     .catalog-item-text__lid= item.lid
     a.link-more.link-more-js(href=`${item.href}`) Подробнее
-    div.d-none= item.text
+    div.v-hidden= item.text
         //- | текст подробнее
         //- | текст подробнее
         //- | текст подробнее
