--- a/dev/css/project-ann.scss
+++ b/dev/css/project-ann.scss
@@ -35,6 +35,7 @@
 
 @import '../scss/blocks/favorites';
 @import '../scss/blocks/basket';
+@import '../scss/blocks/basket-page';
 @import'../scss/blocks/message';
 /* стили сообщ типа 'СПАСИБО ЗА ЗАКАЗ!' */
 @import '../scss/blocks/personal';
