--- a/dev/scss/blocks/_search.scss
+++ b/dev/scss/blocks/_search.scss
@@ -60,11 +60,15 @@
 .search-form {
     position: relative;
 
-    &--basket { 
+    &--basket {  
+        max-width: 518px;
+
        .search-form__clear {
         right: 0;
         visibility: visible;
-       } 
+       }
+       
+
     }
 }
 
