--- a/dev/modules/basket/basket-form.pug
+++ b/dev/modules/basket/basket-form.pug
@@ -1,24 +1,24 @@
-form.form.basket-form 
-  div(style="max-width: 718px;border: 1px solid red;")
+form.form.basket-page-form
+  div
     .basket-form__title 1.Ваш город
     .form-row
-      label.form-item-label(for='city') Ваш город
 
       .search-form.search-form--basket
         input.search-form__input.form-item.form-item--text(type='text' name='city' placeholder='' data-validation='{"message": "Обязательное поле"}' required='' value='Ростов-на-Дону')
         button.search-form__clear.input__clear_visibility_visible.btn.btn--medium(type='button')
+      label.form-item-label(for='city') Ваш город
 
-    .basket-form__title 2. Доставка
-      //- .basket-form__title 2. Доставка
-    .filter-row.filter-row-click
-      .simplebar
-        .filter-row__inner
-          label.form-radio
-            input.form-item.form-item--radio(type='radio' name='pickup')
+    .form-row
+      .basket-form__title 2. Доставка
+        //- .basket-form__title 2. Доставка
+
+      .accordion.accordion--basket-page
+        .accordion-item
+          .accordion-item-heading
             | Из магазина  
             br
             | Бесплатно
-          .filter-row__content.d-none
+          .accordion-item-content
             ul.basket__pickup
               each item in pickupItems
                 li
@@ -32,79 +32,101 @@ form.form.basket-form
           //- a.link.link--gray_border.small.ml-30px(href='#show-on-map-popup' data-popup='{"type":"inline"}') Показать на карте
           //- include ../map
 
-    //- each item in dostavkaItems
-    //-   .filter-row.filter-row-click
-    //-    .simplebar
-    //-     .filter-row__inner
-    //-       label.form-radio
-    //-         .filter-row__radio-coll
-    //-           input.form-item.form-item--radio(type='radio' name='pickup')
-    //-           div= item.item 
-    //-         .filter-row__text-coll= item.text 
-    //-       .filter-row__content.d-none 
-    //-         div(style="margin-top: 30px")
-    //-           div.bold(style="margin-bottom: 25px;") Выбранный адрес доставки
-    //-           div.bold(style="margin-bottom: 10px;")  Постамат в Пятерочке
-    //-           div ул. Евдокимова, 102 Б, Ростов-на-Дону
-    //-           div(style="margin-bottom: 30px") Ежедневно, с 10:00 до 21:00
-    //-           a.link.link--black_border(href="#") Изменить
 
-    .filter-row.filter-row-click
-       .simplebar
-        .filter-row__inner
-          label.form-radio
-            .filter-row__radio-coll
-              input.form-item.form-item--radio(type='radio' name='pickup')
-              div Курьерска служба СДЭК с бесплатной примеркойот 160  Р
-            .filter-row__text-coll Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. 
-          .filter-row__content.d-none 
-            div.mt-40px
-              div.mb-30px
-                | Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней.
-              div.bold.mb-10px  Куда доставить заказ?
-              div.mb-30px
-                .search-form.search-form--basket
-                  input.search-form__input.form-item.form-item--text(type='text' name='city' placeholder='' data-validation='{"message": "Обязательное поле"}' required='' value='Москва, ул. Ленина, 44, кв. 23')
-                  button.search-form__clear.input__clear_visibility_visible.btn.btn--medium(type='button')
-              a.link.link--black_border.basket-add-comment(href="#") Добавить комментарий к заказу
-              div.mt-30px 
-                textarea.form-item--textarea.w-100.d-none(name="", cols="30", rows="10") 
+      .filter-row.filter-row-click
+        .simplebar
+          .filter-row__inner
+            label.form-radio
+              .filter-row__radio-coll
+                input.form-item.form-item--radio(type='radio' name='pickup')
+                div Курьерска служба СДЭК с бесплатной примеркойот 160  Р
+              .filter-row__text-coll Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. 
+            .filter-row__content.d-none 
+                div.mb-30px
+                  | Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней.
+                div.bold.mb-10px  Куда доставить заказ?
+                div.mb-30px
+                  .search-form.search-form--basket
+                    input.search-form__input.form-item.form-item--text(type='text' name='city' placeholder='' data-validation='{"message": "Обязательное поле"}' required='' value='Москва, ул. Ленина, 44, кв. 23')
+                    button.search-form__clear.input__clear_visibility_visible.btn.btn--medium(type='button')
 
+                a.link-more.link-more-js(href="#")  Добавить комментарий к заказу
+                .v-hidden
+                  div.mt-30px 
+                    textarea.form-item--textarea.w-100(name="" cols="30" rows="10") 
 
-  .form-row__title
-    .basket-form__title 2. Контактные данные
-    span
-      //- a.btn.btn--black.btn--medium.btn--fullwidth(href='#size-popup' data-popup='{"type":"inline"}')
-      a.link.link--black_border(href='#auth-form' data-popup='{"type":"inline"}') Уже зарегистрированы?
-  .form-row
-    .form-group
-      .form-group-inner
-        .form-group-item.form-group-item--w32
-          label.form-label(for='ord_name') Фамилия/Имя/Отчество
-          input#ord_name.form-item.form-item--text.form-item--middle(type='text' name='ord_name' required='' data-validation='')
-        .form-group-item.form-group-item--w32
-          label.form-label(for='ord_phone') Телефон
-          input#ord_phone.form-item.form-item--text.form-item--middle(type='text' name='ord_phone' required='' data-validation='{"pattern": "phoneRU", "mask": "+7 (999) 999-99-99"}')
-        .form-group-item.form-group-item--w32
-          label.form-label(for='ord_email') Почта
-          input#ord_email.form-item.form-item--text.form-item--middle(type='email' name='ord_email' required='' data-validation='{"message": "Пользователь с таким именем  зарегистрирован"}')
+      .filter-row.filter-row-click
+        .simplebar
+          .filter-row__inner
+            label.form-radio
+              .filter-row__radio-coll
+                input.form-item.form-item--radio(type='radio' name='pickup')
+                div Пункты выдачи СДЭК
+                  br 
+                  |  от 238 Р
+              .filter-row__text-coll Доставка заказа в один из пунктов самовывоза компании СДЭК.
+            .filter-row__content.d-none 
+                div.mb-30px
+                  | Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней.
+                div.bold.mb-10px  Куда доставить заказ?
+                div.mb-30px
+                  .search-form.search-form--basket
+                    input.search-form__input.form-item.form-item--text(type='text' name='city' placeholder='' data-validation='{"message": "Обязательное поле"}' required='' value='Москва, ул. Ленина, 44, кв. 23')
+                    button.search-form__clear.input__clear_visibility_visible.btn.btn--medium(type='button')
 
+                a.link-more.link-more-js(href="#")  Добавить комментарий к заказу
+                .v-hidden
+                  div.mt-30px 
+                    textarea.form-item--textarea.w-100(name="" cols="30" rows="10") 
 
-  .basket-form__title 3. Оплата
-  .form-row
-    .form-row-payment
-      label.form-radio#payment
-        input.form-item.form-item--radio(type='radio' id="payment-card" name='ord_payment' value='card')
-        span.form-radio-title Банковской картой на сайте
-      label.form-radio
-        input.form-item.form-item--radio(type='radio' id='payment-receipt' name='ord_payment' value='receipt')
-        span.form-radio-title Оплата при получении
+      .filter-row.filter-row-click
+        .simplebar
+          .filter-row__inner
+            label.form-radio
+              .filter-row__radio-coll
+                input.form-item.form-item--radio(type='radio' name='pickup')
+                div Пункты выдачи Via Delivery 
+                  br 
+                  |  от 193 Р
+              .filter-row__text-coll Доставка заказов с выдачей на кассе в Пятерочке или в отделениях СберБанка.
+            .filter-row__content.d-none 
+                div.bold.mb-10px  Куда доставить заказ?
+                div.mb-30px
+                  button.btn.btn--medium(type='button') ВЫБРАТЬ ПУНКТ ВЫДАЧИ
 
+    .form-row
+      .form-row__title
+        .basket-form__title 2. Контактные данные
+        span
+          //- a.btn.btn--black.btn--medium.btn--fullwidth(href='#size-popup' data-popup='{"type":"inline"}')
+          a.link.link--black_border(href='#auth-form' data-popup='{"type":"inline"}') Уже зарегистрированы?
+      .form-row
+        .form-group
+          .form-group-inner
+            .form-group-item.form-group-item--w32
+              label.form-label(for='ord_name') Фамилия/Имя/Отчество
+              input#ord_name.form-item.form-item--text.form-item--middle(type='text' name='ord_name' required='' data-validation='')
+            .form-group-item.form-group-item--w32
+              label.form-label(for='ord_phone') Телефон
+              input#ord_phone.form-item.form-item--text.form-item--middle(type='text' name='ord_phone' required='' data-validation='{"pattern": "phoneRU", "mask": "+7 (999) 999-99-99"}')
+            .form-group-item.form-group-item--w32
+              label.form-label(for='ord_email') Почта
+              input#ord_email.form-item.form-item--text.form-item--middle(type='email' name='ord_email' required='' data-validation='{"message": "Пользователь с таким именем  зарегистрирован"}')
 
-  .form-row
-    .form-row-saile.text-card.d-none  *Скидка 2% при фактической оплате заказа на сайте.   
-  .form-row
-    .form-row-saile.text-receipt.d-none  Оплата производится в момент получения заказа наличными или банковской картой (при предварительном согласовании)   
-
-
-
+    .form-row
+      .basket-form__title 3. Оплата
+      .form-row
+        .form-group
+          .form-group-inner
+            div
+              label.form-radio#payment.filter-row-click
+                input.form-item.form-item--radio(type='radio' id="payment-card" name='ord_payment' value='card')
+                span.form-radio-title Банковской картой на сайте
+              .filter-row__content.d-none
+                | *Скидка 2% при фактической оплате заказа на сайте.
+            div
+              label.form-radio.filter-row-click
+                input.form-item.form-item--radio(type='radio' id='payment-receipt' name='ord_payment' value='receipt')
+                span.form-radio-title Оплата при получении
+              .filter-row__content.d-none
+                | Оплата производится в момент получения заказа наличными или банковской картой (при предварительном согласовании)
