--- a/dev/css/project-ann.css
+++ b/dev/css/project-ann.css
@@ -4742,6 +4742,10 @@ ul.footer-top__list {
   padding-left: 15px !important;
 }
 
+.accordion--basket-page:has(.opened) {
+  border: 1px solid #000;
+}
+
 .accordion--basket-page {
   padding: 0 24px;
   border: 1px solid #E1E1E1;
@@ -4796,10 +4800,29 @@ ul.footer-top__list {
   flex: 1;
 }
 
+.filter-row:has(.opend) {
+  border: 1px solid #000;
+}
+
 .filter-row__content {
-  border: 1px solid red;
   margin-top: 20px;
   margin-left: 20px;
+}
+
+.filter-row__inner .filter-row__content {
+  display: none;
+}
+
+.filter-row__inner.opend .filter-row__content {
+  display: block;
+}
+
+.jcf-radio:has(.hidden-radio) {
+  display: none;
+}
+
+.opend .v-hidden {
+  visibility: visible;
 }
 
 .message {
