--- a/dev/modules/basket/total-cost.pug
+++ b/dev/modules/basket/total-cost.pug
@@ -25,7 +25,8 @@
       .promocode-block__col
         button.btn.btn--medium.btn--black_border.mx-auto.w-100(type='button') Применить
 
-  a.btn.btn--large.btn--black.btn--fullwidth(href='#checkout-popup' data-popup='{"type":"inline"}') ОФОРМИТЬ ЗАКАЗ
+  //- a.btn.btn--large.btn--black.btn--fullwidth(href='#checkout-popup' data-popup='{"type":"inline"}') ОФОРМИТЬ ЗАКАЗ
+  a.btn.btn--large.btn--black.btn--fullwidth(type='submit') 1ОФОРМИТЬ ЗАКАЗ
   .form-policy
     .page-text
       .small
